[project]
name = "ndeleh-fba"
version = "0.1.0"
description = "Ndeleh Fish Bone Algorithm (N-FBA): A biologically-inspired associative intelligence model."
readme = "README.md"
authors = [
    { name = "Ndeleh", email = "none@example.com" }
]
requires-python = ">=3.8"
license = { text = "Apache-2.0" }

dependencies = [
    "fastapi",
    "uvicorn",
    "networkx",
    "matplotlib"
]

[project.urls]
Homepage = "https://github.com/NDELEH/ndeleh-fba"
Documentation = "https://github.com/NDELEH/ndeleh-fba"
Source = "https://github.com/NDELEH/ndeleh-fba"

[project.scripts]
nfb = "ndeleh_fba.cli.fba_cli:fba_cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

